--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "sp_chat_ai_core_yamabiko"
-version = "0.1.0"
-description = "chat AI core"
+version = "0.1.1"
+description = "chat AI core yamabiko"
 requires-python = ">=3.10,<3.13"
 
 dependencies = [
